Added style.css file and updated index.html.

--- a/index.html
+++ b/index.html
@@ -9,18 +9,47 @@
     <meta name="keywords" content="Sherlock, Holmes, Fan page, Fictional, Character">
     <meta name="author" content="Sonali Tandon">
     <title>Sherlock Holmes</title>
+
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <h1>Sherlock Holmes</h1>
-    <p>This is a fan page of fictional character Sherlock Holmes played by the actor Benedict Cumberbatch. The TV series
-        - Sherlock Holmes
-        is based on the mystery novels written by Sir Arthur Conan Doyle. The genre is a combination of mystery, crime
-        and comedy. Sherlock stays at the famous address 221 Baker Street, London. Sherlock is a private detective and
-        genius who investigates crime by looking for clues and being
-        super observant. He is somewhat of a mind reader.
-    </p>
-    <img src="images/sherlock.jpg" alt="Sherlock Holmes">
+    <div class="contentbackground">
+        <div class="content">
+            <img src="images/sherlock.jpg" alt="Sherlock Holmes" id="characterimg">
+            <p class="charactercontent">This is a fan page of fictional character Sherlock Holmes played by the actor
+                Benedict Cumberbatch. The TV
+                series
+                - <cite><a href="https://www.imdb.com/title/tt1475582/?ref_=nv_sr_srsg_0" id="tvshowlink">Sherlock</a>
+                    created by Mark Gatiss and Steven Moffat,</cite>
+                is based on the mystery novels written by Sir Arthur Conan Doyle. The genre is a combination of mystery,
+                crime
+                and comedy. Sherlock stays at the famous address 221 Baker Street, London. Sherlock is a private
+                detective
+                and
+                genius who investigates crime by looking for clues and being
+                super observant. He is somewhat of a mind reader.
+            </p>
+        </div>
+    </div>
+    <div class="list">
+        <h2>Why I admire this character?</h2>
+        <ul>
+            <li>I relate to some parts of Sherlock's personality. Just like him, I have this strong urge of spending
+                most of my time alone in my own company, just thinking about stuff. And even I have very few friends
+                just like he does.
+            </li>
+            <li>I like the mystery genre in general and all the episodes are super exciting with a great plot twist.
+                The story is well thought out.
+            </li>
+            <li>
+                Apart from the character Sherlock, I am a big fan of Benedict Cumberbatch as well and I think he is
+                an amazing actor and does justice to any role he portrays, especially this one.
+            </li>
+        </ul>
+    </div>
+    <div class="footer"></div>
 
 </body>
 
